[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molvoxel"
authors = [{ name = "Seonghwan Seo", email = "shwan0106@gmail.com" }]
version = "0.2.0"
description = "MolVoxel:Easy-to-Use Molecular Voxelization Tool"
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
numba = ["numba"]
torch = ["torch"]
rdkit = ["rdkit"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["molvoxel*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "B", "T203", "I", "UP"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
diagnosticMode = "openFilesOnly"
venvPath = '.'
venv = 'python310'
